--- a/App1/style2.css
+++ b/App1/style2.css
@@ -24,7 +24,7 @@ body {
 #play-again-btn {
   position: absolute;
   top: -0.5rem;
-  left: 50%;
+  left: 70%;
   margin-left: -50px;
   font-size: 1rem;
   font-weight: bold;
@@ -69,6 +69,18 @@ body {
   cursor: move;
   transition: opacity 0.2s;
 }
+
+.icono{
+  height: 5rem;
+  width: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  font-weight: bold;
+  margin: 2rem;
+}
+
 .draggable:hover {
   opacity: 0.5;
 }
