--- a/maze-game/css/styles.css
+++ b/maze-game/css/styles.css
@@ -87,3 +87,21 @@ input {
   color: #000000;
   font-family: "Bungee Inline", cursive;
 }
+
+label {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+select {
+  margin-bottom: 5px;
+  margin-top: 5px;
+  outline: 0;
+  background: #000000;
+  color: #fff;
+  border: 1px solid #000000;
+  padding: 4px;
+  border-radius: 9px;
+}
